# solana-launchpad-ecosystem

./: .gitignore  Anchor.toml  Cargo.toml  README.md  description.json  manifest.json  whitepaper.md
bots/optimizer-bot/: Cargo.toml
bots/optimizer-bot/src/: main.rs
bots/price-keeper-bot/: Cargo.toml
bots/price-keeper-bot/src/: main.rs
crates/genesis-common/: Cargo.toml
crates/genesis-common/src/: constants.rs  lib.rs  utils.rs
docs/: README.html  index.html  whitepaper.html
docs/programs/affiliate-program/: README.html
docs/programs/barter-dex-program/: README.html
docs/programs/factory-program/: README.html
programs/affiliate-program/: Cargo.toml  README.md
programs/affiliate-program/src/: error.rs  lib.rs  state.rs
programs/barter-dex-program/: Cargo.toml  README.md
programs/barter-dex-program/src/: error.rs  lib.rs  state.rs
programs/factory-program/: Cargo.toml  README.md
programs/factory-program/src/: error.rs  lib.rs  state.rs
tests/: integration.rs  smoke.rs
