[workspace]
members = [
    "programs/factory-program",
    "programs/affiliate-program",
    "programs/barter-dex-program",
    "crates/genesis-common",
    # Bots rely on host networking stacks that can pull in OpenSSL on Windows.
    # Exclude bots from the default workspace build to allow program-test to compile cleanly.
    # You can build bots explicitly later after configuring OpenSSL or switching to rustls-only deps.
    # "bots/optimizer-bot",
    # "bots/price-keeper-bot"
]
# resolver v2 already set below; keeping single declaration to avoid duplicates
resolver = "2"

[workspace.dependencies]
# Anchor 0.31.x across workspace
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
# Solana 2.x line used by Anchor 0.31.x
# Pin to the latest available crates.io versions (2.3.0 as 2.3.1 is not published)
# Use the latest published 2.3 minor available on crates.io
solana-program = "2.3.0"
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
# Common testing/runtime crates
tokio = { version = "1", features = ["full"] }
assert_matches = "1.5.0"
# SPL crates compatible with Solana 2.x
spl-token = "6.0.0"
spl-associated-token-account = "3.0.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1