[workspace]
members = [
    "programs/factory-program",
    "programs/affiliate-program",
    "programs/barter-dex-program",
    "crates/genesis-common",
    # Bots rely on host networking stacks that can pull in OpenSSL on Windows.
    # Exclude bots from the default workspace build to allow program-test to compile cleanly.
    # You can build bots explicitly later after configuring OpenSSL or switching to rustls-only deps.
    # "bots/optimizer-bot",
    # "bots/price-keeper-bot"
]
# resolver v2 already set below; keeping single declaration to avoid duplicates
resolver = "2"

[workspace.dependencies]
# Anchor 0.31.x across workspace with latest compatible versions
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
# Solana 2.x line used by Anchor 0.31.x - updated to latest stable
solana-program = "2.3.0"
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
# Enhanced dependencies for AI integration and performance
tokio = { version = "1", features = ["full", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.35"
# Security and performance enhancements
assert_matches = "1.5.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
# SPL crates compatible with Solana 2.x - enhanced versions
spl-token = "6.0.0"
spl-associated-token-account = "3.0.2"
spl-token-2022 = "6.0.0"
# Additional dependencies for advanced features
pyth-sdk-solana = "0.11"
switchboard-v2 = "0.4"
# Development and testing enhancements
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
fuzz = "0.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1