[package]
name = "factory-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "factory_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# The core Anchor framework for Solana program development.
anchor-lang = { workspace = true }
# Anchor's helpers for interacting with SPL programs like the Token Program.
anchor-spl = { workspace = true }
# Solana 2.x SDK (pulled via workspace)
solana-program = { workspace = true }
# CPI client for the affiliate program, enabling this program to call its instructions.
affiliate-program = { path = "../affiliate-program", features = ["cpi"] }
# Shared constants (PDA seeds) for the ecosystem.
genesis-common = { path = "../../crates/genesis-common" }